<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">StudentSave</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_goal">Add a new goal</string>
    <string name="title_activity_save">Save money for your goal</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_input">Input</string>
    <string name="title_activity_externalpicture">Add an external picture to your goal</string>

    <!-- Ok_cancel -->
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_button">Delete</string>

    <string name="ok_picture_desc">OK</string>
    <string name="cancel_picture_desc">Cancel</string>
    <string name="delete_picture_desc">Delete</string>

    <!-- Static -->
    <string name="input_activity_type">INPUT_ACTIVITY_TYPE</string>
    <string name="goal_activity_type">GOAL_ACTIVITY_TYPE</string>

    <!-- Main Activity -->
    <string name="add_goal_area">Add a goal</string>
    <string name="income_button">Income</string>
    <string name="expense_button">Expense</string>
    <string name="save_button">Save</string>
    <string name="no_history_yet_text">No History Yet</string>

    <string name="to_go">to go</string>
    <string name="done">done</string>

    <string name="goal_done_title">Congratulations!</string>
    <string name="goal_done_text">You have saved enough money to reach your goal. Enjoy \"%1$s\"!</string>

    <string name="goal_reminder_title">Reminder</string>
    <string name="goal_reminder_text">Don\'t forget to save for %1$s</string>

    <string name="goal_deadline_passed_title">Your deadline has passed</string>
    <string name="goal_deadline_passed_text">You can set a new deadline for \"%1$s\" or collect needed money soon.</string>

    <plurals name="days_left">
        <item quantity="one">day left</item>
        <item quantity="other">days left</item>
    </plurals>
    <!-- wallet: see history -->

    <!-- Add Goal Activity -->
    <string name="goal_name_et">Name of your goal</string>
    <string name="amount_et">Amount to save</string>

    <string name="save_remind_text">Remind me to save</string>
    <string name="save_remind_on_text">Yes</string>
    <string name="save_remind_off_text">No</string>
    <string name="save_remind_month_text">Every month</string>
    <string name="save_remind_week_text">Every week</string>
    <string name="save_remind_day_text">Every day</string>

    <string name="goal_date_text">Set a deadline</string>
    <string name="goal_date_on_text">Yes</string>
    <string name="goal_date_off_text">No</string>
    <string name="due_date_et">DD/MM/YYYY</string>
    <string name="date_format_text">The format should\nbe DD/MM/YYYY</string>
    <string name="date_no_past_text">This is a date in the past!</string>
    <string name="date_not_valid_text">This is not a valid date</string>

    <string name="choose_picture_text">Choose a picture:</string>
    <string name="no_pictures_yet">We are sorry: adding your own picture is not possible yet. Please check our next versions for this functionality.</string>

    <string name="delete_confirmation_title">Are you sure?</string>
    <string name="delete_confirmation">Your goal will be permanently deleted. All your savings for \"%1$s\" will go back into your wallet.</string>
    <string name="delete_goal_title">Delete goal \"%1$s\"</string>

    <string name="car_picture_desc">Possible picture for a goal: car</string>
    <string name="shopping_picture_desc">Possible picture for a goal: shopping bags</string>
    <string name="beer_picture_desc">Possible picture for a goal: beer</string>
    <string name="suitcase_picture_desc">Possible picture for a goal: suitcase</string>
    <string name="piggybank_picture_desc">Possible picture for a goal: piggy bank</string>
    <string name="multimedia_picture_desc">Possible picture for a goal: multimedia devices</string>
    <string name="guitar_picture_desc">Possible picture for a goal: guitar</string>
    <string name="gifts_picture_desc">Possible picture for a goal: gifts</string>
    <string name="dotdotdot_picture_desc">Possible picture for a goal: choose an external picture of your own</string>

    <!-- Save Activity -->
    <string name="save_for_goal_text">Save money for your goal</string>
    <string name="pick_category">Pick a category below:</string>
    <string name="enter_amount">Enter amount</string>
    <string name="undo_saving">Undo savings %1$s</string>
    <string name="undo_saving_long">Delete goal \"%1$s\"</string>
    <string name="saving_long">Savings for goal \"%1$s\"</string>

    <!-- Input -->
    <string-array name="income_categories">
        <item>Babysitting</item>
        <item>Pocket Money</item>
        <item>Student Job</item>
        <item>Tutoring</item>
        <item>Other</item>
    </string-array>
    <string-array name="expense_categories">
        <item>Books</item>
        <item>Food</item>
        <item>Gifts</item>
        <item>Groceries</item>
        <item>Party</item>
        <item>Transport</item>
        <item>Other</item>
    </string-array>
    <string-array name="save_categories">
        <item>Your Goal</item>
    </string-array>

    <!-- History Activity -->
    <string name="wallet_text">Wallet</string>
    <string name="saving_for_text">Savings for</string>
    <string name="history_image_desc">Image representing the type of history element</string>

    <!-- Input Activity -->
    <string name="enter_name">Enter a description (optional)</string>
    <string name="goal_not_initialized">You must create a goal before you can save for one!</string>
    <string name="dont_forget_piggybank">Don\'t forget to put the real money in your real piggy bank!</string>
    <string name="amount_in_wallet">Currently in wallet: </string>
    <string name="fill_in_amount">You should fill in a correct amount.</string>
    <string name="not_enough_money">You don\'t have enough money in your wallet to do that!</string>
    <string name="amount_too_much">That\'s more than you have!</string>
    <string name="amount_over_left">You only need to save another </string>
    <string name="amount_something_wrong">There\'s something wrong with that amount…</string>
    <string name="save_money">Save money for your goal</string>
    <string name="history_type">History Type</string>
    <string name="savetitle">Save Money</string>
    <string name="expensetitle">Input Expense</string>
    <string name="incometitle">Input Income</string>
    <string name="title_activity_edit_goal">Edit Goal</string>


</resources>
