<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="fill_parent">

    <EditText
        android:id="@+id/enter_name_et"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:hint="@string/enter_name"
        android:singleLine="true"
        android:maxLength="30"
        android:selectAllOnFocus="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:hint="@string/enter_amount"
        android:id="@+id/enter_amount_et"
        android:layout_gravity="center_horizontal"
        android:singleLine="true"
        android:maxLength="30"
        android:selectAllOnFocus="true"
        android:inputType="numberDecimal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:text="@string/pick_category"
        android:autoLink="none"
        android:textColor="#7dd4ff"
        android:textSize="18sp"
        android:textStyle="normal"
        android:typeface="normal"
        android:gravity="center"
        android:id="@+id/pick_category"/>

    <ListView
        android:isScrollContainer="false"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:id="@+id/categoryListView" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.12">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/ok_button"
            android:id="@+id/ok_input"
            android:onClick="confirmInput"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/cancel_button"
            android:id="@+id/cancel_input"
            android:onClick="cancelButton"/>

    </LinearLayout>
</LinearLayout>