<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_weight="1"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:id="@+id/header"
        android:layout_weight="0.25"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/nameOfGoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:hint="@string/goal_name_et"
            android:singleLine="true"
            android:maxLength="30"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/amountToSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount_et"
            android:singleLine="true"
            android:maxLength="30"
            android:selectAllOnFocus="true"
            android:textColor="#797979"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_picture_text"
            android:id="@+id/choosePicture"
            android:autoLink="none"
            android:textColor="#7dd4ff"
            android:textSize="18sp"
            android:textStyle="normal"
            android:typeface="normal"
            android:gravity="center"/>
    </LinearLayout>
    <be.kuleuven.chi.app.CoverFlow
        android:id="@+id/coverflow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_gravity="bottom"
        android:layout_weight="0.25"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_buttons">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ok_button"
            android:id="@+id/okGoal"
            android:layout_weight="0.5"
            android:clickable="true"
            android:onClick="okButton"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:id="@+id/cancelGoal"
            android:layout_weight="0.5"
            android:onClick="cancelButton"/>
    </LinearLayout>

</LinearLayout>