<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0.12"
    android:gravity="center_horizontal"
    android:background="@null">

    <LinearLayout
        android:id="@+id/popup_ok"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="0.33"
        android:visibility="visible">

        <ImageButton
            android:id="@+id/popup_image_ok"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:layout_gravity="center_vertical|right"
            android:src="@drawable/ok"
            android:contentDescription="@string/ok_picture_desc"
            android:scaleType="fitCenter"
            android:paddingRight="10dp"
            android:tint="@color/GhostWhite" />

        <TextView
            android:id="@+id/popup_text_ok"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/ok_button"
            android:clickable="true"
            android:background="@null"
            android:singleLine="true"
            android:textSize="30sp"
            android:gravity="center_vertical|left"
            android:layout_gravity="center_vertical|left"
            android:textColor="@color/GhostWhite" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/popup_delete"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:gravity="center"
        android:layout_weight="0.33"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/popup_image_delete"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:layout_gravity="center_vertical|right"
            android:src="@drawable/delete"
            android:contentDescription="@string/delete_picture_desc"
            android:scaleType="fitCenter"
            android:tint="@color/GhostWhite"
            android:paddingRight="10dp"
            android:focusable="true" />

        <TextView
            android:id="@+id/popup_text_delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/delete_button"
            android:background="@null"
            android:layout_gravity="center_vertical|left"
            android:textSize="30sp"
            android:gravity="center_vertical|left"
            android:singleLine="true"
            android:textColor="@color/GhostWhite"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/popup_cancel"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:gravity="center"
        android:layout_weight="0.33"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/popup_image_cancel"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:layout_gravity="center_vertical|right"
            android:src="@drawable/cancel"
            android:contentDescription="@string/cancel_picture_desc"
            android:scaleType="fitCenter"
            android:tint="@color/GhostWhite"
            android:paddingRight="10dp" />

        <TextView
            android:id="@+id/popup_text_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cancel_button"
            android:background="@null"
            android:layout_gravity="center_vertical|left"
            android:textSize="30sp"
            android:gravity="center_vertical|left"
            android:singleLine="true"
            android:textColor="@color/GhostWhite" />
    </LinearLayout>

</LinearLayout>